Fixes adding cart with proper pod association.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,9 +11,10 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <li>{{#link-to 'pods'}}Pods{{/link-to}}</li>
+        <li>{{#link-to 'pods.new'}}Add a Pod{{/link-to}}</li>
         <li>{{#link-to 'carts'}}Carts{{/link-to}}</li>
         <li>{{#link-to 'carts.new'}}Add a Cart{{/link-to}}</li>
-        <li>{{#link-to 'pods'}}Pods{{/link-to}}</li>
 
       </ul>
     </div>
