--- a/app/templates/carts/new.hbs
+++ b/app/templates/carts/new.hbs
@@ -4,7 +4,16 @@
   {{input type="text" placeholder="Description" value=description class="description-input"}}
   {{input type="number" placeholder="Rank this Cart" value=rank class="rank-input"}}
   {{input type="number" placeholder="Cost" value=cost class="cost-input"}}
-  {{input type="text" placeholder="Pod" value=pod class="pod-input"}}
+  <!-- {{input type="text" placeholder="Pod" value=pod class="pod-input"}} -->
+    <!-- {{view "select" content=podFake}} -->
+  <div class="form-group">
+    <label for="select1">Select a pod</label>
+    <select class="form-control" id="select1">
+      {{#each pod in model}}
+        <option>{{pod.name}}</option>
+      {{/each}}
+    </select>
+  </div>
 
   <button {{action 'addCart'}} class="submit">Submit</button>
 </div>
