--- a/app/templates/carts/new.hbs
+++ b/app/templates/carts/new.hbs
@@ -6,14 +6,21 @@
   {{input type="number" placeholder="Cost" value=cost class="cost-input"}}
   <!-- {{input type="text" placeholder="Pod" value=pod class="pod-input"}} -->
     <!-- {{view "select" content=podFake}} -->
-  <div class="form-group">
-    <label for="select1">Select a pod</label>
-    <select class="form-control" id="select1">
-      {{#each pod in model}}
-        <option>{{pod.name}}</option>
+  <!-- <div class="form-group">
+    <label for="pod">Select a pod</label>
+    <select class="form-control" id="pod" value="pod">
+      {{#each pod in pods}}
+        <option>{{pod.podName}}</option>
       {{/each}}
     </select>
-  </div>
+  </div> -->
+{{view Ember.Select
+contentBinding=pods
+optionLabelPath="content.podName"
+value=pod1
+}}
+
 
   <button {{action 'addCart'}} class="submit">Submit</button>
+
 </div>
