--- a/app/templates/carts/new.hbs
+++ b/app/templates/carts/new.hbs
@@ -4,6 +4,7 @@
   {{input type="text" placeholder="Description" value=description class="description-input"}}
   {{input type="number" placeholder="Rank this Cart" value=rank class="rank-input"}}
   {{input type="number" placeholder="Cost" value=cost class="cost-input"}}
+  {{input type="text" placeholder="Picture URL" value=picture class="picture-input"}}
   <!-- {{input type="text" placeholder="Pod" value=pod class="pod-input"}} -->
     <!-- {{view "select" content=podFake}} -->
   <!-- <div class="form-group">
