--- a/app/templates/pod.hbs
+++ b/app/templates/pod.hbs
@@ -1,3 +1,6 @@
+<button class="btn btn-danger" {{action 'delete'}}>Delete this pod</button>
+<br>
+
 <p>All carts: {{model.podName}}</p>
   {{#each cart in model.carts}}
     <li>{{cart.name}}</li>
