--- a/app/templates/pods.hbs
+++ b/app/templates/pods.hbs
@@ -8,7 +8,7 @@
   <div class="each-pod">{{#link-to 'pod' pod.id}}{{pod.podName}} in {{pod.podLocation}}{{/link-to}}</div>
 {{/each}}
 
-
+<button class="btn" {{action 'debug'}}>debug</button>
 
 
 <!-- <p>All carts:</p>
